--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prototype</title>
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <h1>Prosjekt 2 - design prototype</h1>
+    <!-- Knapp som lenker til oppgave esten -->
+    <a href="oppgaveTekst.html"><button>Oppgavetekst</button></a>
+    <img src="img/Screenshot 2023-10-13 172704.png" alt="bilde av knapper">
+    
 </body>
 </html>
