--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         <div>
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Filmer</a>
-            <a class="nav-item nav-link" href="oppgaveTekst.html">Oppgavetekst</a>
+            <a class="nav-item nav-link" href="Avokado/AvokadoC.html">Avokadotoast</a>
+            <a class="nav-item nav-link" href="oppgaveTekst2.html">Oppgave 2</a>
+            <a class="nav-item nav-link" href="oppgaveTekst3.html">Oppgave 3</a>
           </div>
         </div>
       </nav>
