--- a/oppgaveTekst2.html
+++ b/oppgaveTekst2.html
@@ -8,8 +8,9 @@
     <!-- Bootstrap bibiliotek ///////////////////////////////////////////////////////////// -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/oppgaveTekst.css">
+    
     <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/oppgaveTekst.css">
 </head>
 <body>
     
@@ -19,7 +20,9 @@
         <div>
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="index.html">Filmer</a>
-            <a class="nav-item nav-link" href="oppgaveTekst.html">Oppgavetekst</a>
+            <a class="nav-item nav-link" href="Avokado/AvokadoC.html">Avokadotoast</a>
+            <a class="nav-item nav-link" href="oppgaveTekst2.html">Oppgave 2</a>
+            <a class="nav-item nav-link" href="oppgaveTekst3.html">Oppgave 3</a>
           </div>
         </div>
       </nav>
